deploy: d0a627b75f67b7737ec9cf9bafdb22e8dca75de7

--- a/3392-leadership-council.html
+++ b/3392-leadership-council.html
@@ -171,7 +171,7 @@
 <li><a href="#%E4%BB%BB%E6%9C%9F%E9%99%90%E5%88%B6">任期限制</a></li>
 <li><a href="#%E5%B0%8D%E5%96%AE%E4%B8%80%E5%85%AC%E5%8F%B8%E6%88%96%E5%AF%A6%E9%AB%94%E4%BB%A3%E8%A1%A8%E4%B9%8B%E9%99%90%E5%88%B6">對單一公司或實體代表之限制</a></li>
 <li><a href="#%E5%80%99%E9%81%B8%E8%B3%87%E6%A0%BC">候選資格</a></li>
-<li><a href="#%E8%88%87%E6%A0%B8%E5%BF%83%E5%9C%98%E9%9A%8A%E4%B9%8B%E9%97%9C%E4%BF%82">與核心團隊之關係</a></li>
+<li><a href="#%E8%88%87-core-%E5%9C%98%E9%9A%8A%E4%B9%8B%E9%97%9C%E4%BF%82">與 Core 團隊之關係</a></li>
 <li><a href="#%E8%88%87-rust-%E5%9F%BA%E9%87%91%E6%9C%83%E4%B9%8B%E9%97%9C%E4%BF%82">與 Rust 基金會之關係</a></li>
 </ul>
 </li>
@@ -206,17 +206,17 @@
 <li><a href="#%E7%A2%BA%E4%BF%9D%E8%83%BD%E8%BF%BD%E7%A9%B6%E5%9C%98%E9%9A%8A%E4%B9%8B%E8%B2%AC%E4%BB%BB">確保能追究團隊之責任</a></li>
 </ul>
 </li>
-<li><a href="#%E4%BB%B2%E8%A3%81%E3%80%81%E5%88%86%E6%AD%A7%E8%88%87%E8%A1%9D%E7%AA%81">仲裁、分歧與衝突</a>
+<li><a href="#%E5%AF%A9%E6%A0%B8%E3%80%81%E5%88%86%E6%AD%A7%E8%88%87%E8%A1%9D%E7%AA%81">審核、分歧與衝突</a>
 <ul>
 <li><a href="#%E5%9C%98%E9%9A%8A%E9%96%93%E4%B9%8B%E5%88%86%E6%AD%A7">團隊間之分歧</a></li>
 <li><a href="#%E6%B6%89%E5%8F%8A%E5%9C%98%E9%9A%8A%E6%88%96%E5%B0%88%E6%A1%88%E6%88%90%E5%93%A1%E4%B9%8B%E8%A1%9D%E7%AA%81">涉及團隊或專案成員之衝突</a></li>
-<li><a href="#%E4%BB%B2%E8%A3%81%E4%BA%BA%E4%BB%A3%E8%A1%A8%E5%9C%98">仲裁人代表團</a></li>
-<li><a href="#%E4%BB%B2%E8%A3%81%E5%9C%98%E9%9A%8A%E4%B9%8B%E6%94%BF%E7%AD%96%E8%88%87%E7%A8%8B%E5%BA%8F">仲裁團隊之政策與程序</a></li>
+<li><a href="#%E5%AF%A9%E6%A0%B8%E4%BA%BA%E4%BB%A3%E8%A1%A8%E5%9C%98">審核人代表團</a></li>
+<li><a href="#%E5%AF%A9%E6%A0%B8%E5%9C%98%E9%9A%8A%E4%B9%8B%E6%94%BF%E7%AD%96%E8%88%87%E7%A8%8B%E5%BA%8F">審核團隊之政策與程序</a></li>
 <li><a href="#%E7%A8%BD%E6%A0%B8">稽核</a></li>
 <li><a href="#%E6%9C%80%E7%B5%82%E5%95%8F%E8%B2%AC%E6%A9%9F%E5%88%B6">最終問責機制</a></li>
-<li><a href="#%E6%B6%89%E5%8F%8A%E5%B0%88%E6%A1%88%E6%88%90%E5%93%A1%E4%B9%8B%E4%BB%B2%E8%A3%81%E6%8E%AA%E6%96%BD">涉及專案成員之仲裁措施</a></li>
+<li><a href="#%E6%B6%89%E5%8F%8A%E5%B0%88%E6%A1%88%E6%88%90%E5%93%A1%E4%B9%8B%E5%AF%A9%E6%A0%B8%E6%8E%AA%E6%96%BD">涉及專案成員之審核措施</a></li>
 <li><a href="#%E6%B6%89%E5%8F%8A%E7%90%86%E4%BA%8B%E6%9C%83%E4%BB%A3%E8%A1%A8%E4%B9%8B%E8%A1%9D%E7%AA%81">涉及理事會代表之衝突</a></li>
-<li><a href="#%E6%B6%89%E5%8F%8A%E4%BB%B2%E8%A3%81%E5%9C%98%E9%9A%8A%E6%88%90%E5%93%A1%E4%B9%8B%E8%A1%9D%E7%AA%81">涉及仲裁團隊成員之衝突</a></li>
+<li><a href="#%E6%B6%89%E5%8F%8A%E5%AF%A9%E6%A0%B8%E5%9C%98%E9%9A%8A%E6%88%90%E5%93%A1%E4%B9%8B%E8%A1%9D%E7%AA%81">涉及審核團隊成員之衝突</a></li>
 </ul>
 </li>
 <li><a href="#%E6%9C%AC%E6%A1%88%E4%B9%8B%E6%89%B9%E5%87%86">本案之批准</a></li>
@@ -272,7 +272,7 @@
 <li><em>維持健康的工作環境</em>：理事會代表應該要為他們的貢獻與其性質感到滿意。他們不應認為自己在理事會中的存在只是義務所為，而必須是因為他們用有意義的方式主動參與。</li>
 <li><em>持續演化</em>：理事會受到期待會隨著時間演化以應對團隊、專案以及社群的演化。</li>
 </ul>
-<p>理事會代表、仲裁團隊成員以及其他專案成員都應該能為身邊的人以及更廣泛的社群做好示範。這些職位都有對應的責任與領導，也因此這些人的行為都帶有份量而會對社群造成重大影響，也因此必須注意行使職權。選擇要行使這些職權的人都應該要知道身邊的人會以對應的高標準看待他們。</p>
+<p>理事會代表、審核團隊成員以及其他專案成員都應該能為身邊的人以及更廣泛的社群做好示範。這些職位都有對應的責任與領導，也因此這些人的行為都帶有份量而會對社群造成重大影響，也因此必須注意行使職權。選擇要行使這些職權的人都應該要知道身邊的人會以對應的高標準看待他們。</p>
 <h1 id="理事會組織架構"><a class="header" href="#理事會組織架構">理事會組織架構</a></h1>
 <p>理事會由一群團隊代表所組成，各代表一支<a href="#%E4%B8%80%E7%B4%9A%E5%9C%98%E9%9A%8A%E5%96%AE%E4%BD%8D">一級團隊</a>以及其子團隊。</p>
 <p>每支一級團隊都能用各自所選的程序選出恰好一名代表。</p>
@@ -291,7 +291,7 @@
 <p>一級團隊的數量必須介於 4 到 9（包含）之間，傾向介於 5 到 8 之間。這個數字能相對平衡多元性的需求以及相對小的架構，同時又在進行有效對話與共識凝聚時具備實務性。<sup class="footnote-reference"><a href="#number-of-representatives">5</a></sup></p>
 <p>當理事會建立起全新一級團隊時，該團隊則該指派一名理事會代表。<sup class="footnote-reference"><a href="#bootstrapping-new-teams">6</a></sup>當建立起全新的一級團隊時，理事會必須提供為何該一級團隊不能作為子團隊或者其他管理架構存在的解釋。</p>
 <h3 id="一級團隊初始名單"><a class="header" href="#一級團隊初始名單">一級團隊初始名單</a></h3>
-<p>一級團隊的初始名單由本案使發表時列於 <a href="https://www.rust-lang.org/governance">rust-lang.org 網站的一級管理區域</a>的所有團隊組成（除去核心團隊與校友），再加上<a href="#%E3%80%8C%E5%95%9F%E5%8B%95%E5%8F%B0%E3%80%8D%E4%B8%80%E7%B4%9A%E5%9C%98%E9%9A%8A">「啟動台」團隊</a>：</p>
+<p>一級團隊的初始名單由本案使發表時列於 <a href="https://www.rust-lang.org/governance">rust-lang.org 網站的一級管理區域</a>的所有團隊組成（除去 Core 團隊與校友），再加上<a href="#%E3%80%8C%E5%95%9F%E5%8B%95%E5%8F%B0%E3%80%8D%E4%B8%80%E7%B4%9A%E5%9C%98%E9%9A%8A">「啟動台」團隊</a>：</p>
 <ul>
 <li>編譯器</li>
 <li>Crates.io</li>
@@ -300,7 +300,7 @@
 <li>語言</li>
 <li>啟動台</li>
 <li>函式庫</li>
-<li>仲裁</li>
+<li>審核</li>
 <li>發佈</li>
 </ul>
 <p>本清單並不是最佳的一級團隊組成。本案建議理事會的最開始的工作就是檢視既存的管理架構並確保所有架構都在一個或多個一級團隊中有直接或間接的代表，並且確保所有一級團隊都有符合能被認定為一級團隊的條件。這將會涉及對一級團隊組成的調整。</p>
@@ -313,7 +313,7 @@
 <p>理事會必須每六個月審視「啟動台」中的子團隊成員狀況，以確保有合適的流程在協助所有子團隊成員找到新的母團隊。而與其它一級團隊相同的是，只要理事會認為「啟動台」團隊不再需要，就可以將之撤除（並且移除掉其在理事會中的代表）。撤除「啟動台」團隊的流程與其他一級團隊同理。除此之外，理事會也可以給予「啟動台」團隊自己的權責，但是此措施不屬於本案的範圍內。</p>
 <h3 id="廢除一級團隊"><a class="header" href="#廢除一級團隊">廢除一級團隊</a></h3>
 <p>任何要移除團隊的一級指定（或其他會導致無法參與理事會）的決策，都需要除卻將被移除的一級團隊代表外所有理事會代表的共識。雖然如此，必須要邀請考慮移除的團隊代表參與關於團隊移除的理事會審議，而理事會也只能在極端特例下不顧團隊反對將之移除。</p>
-<p>理事會不得移除仲裁團隊。理事會不能在沒有仲裁團隊的同意下改變仲裁團隊的權責。</p>
+<p>理事會不得移除審核團隊。理事會不能在沒有審核團隊的同意下改變審核團隊的權責。</p>
 <h2 id="候補與放棄代表權利"><a class="header" href="#候補與放棄代表權利">候補與放棄代表權利</a></h2>
 <p>A representative may end their term early if necessary, such as due to changes in their availability or circumstances. The respective top-level team must then begin selecting a new representative. The role of representative is a volunteer position. No one is obligated to fill that role, and no team is permitted to make serving as a representative a necessary obligation of membership in a team. However, a representative is obligated to fulfill the duties of the position of representative, or resign that position.</p>
 <p>A top-level team may decide to temporarily relinquish their representation, such as if the team is temporarily understaffed and they have no willing representative. However, if the team does not designate a Council representative, they forgo their right to actively participate in decision-making at a Project-wide level. All Council procedures including decision-making should not be blocked due to this omission. The Council is still obligated to consider new information and objections from all Project members. However, the Council is not obligated to block decisions to specially consider or collate a non-represented team's feedback.</p>
@@ -354,7 +354,7 @@
 <li>ability and willingness to represent all viewpoints from their team, not just a subset, and not just those they agree with.</li>
 </ul>
 <p>While some teams may not currently have an abundance of candidates who fit this criteria, the Council should actively foster such skills within the larger Project, as these are helpful not only for Council membership but across the entire Project.</p>
-<h2 id="與核心團隊之關係"><a class="header" href="#與核心團隊之關係">與核心團隊之關係</a></h2>
+<h2 id="與-core-團隊之關係"><a class="header" href="#與-core-團隊之關係">與 Core 團隊之關係</a></h2>
 <p>The Leadership Council serves as the successor to the core team in all capacities. This RFC was developed with the participation and experience of the core team members, and the Council should continue seeking such input and institutional memory when possible, especially while ramping up.</p>
 <p>External entities or processes may have references to &quot;the Rust core team&quot; in various capacities. The Council doesn't use the term &quot;core team&quot;, but the Council will serve in that capacity for the purposes of any such external references.</p>
 <h2 id="與-rust-基金會之關係"><a class="header" href="#與-rust-基金會之關係">與 Rust 基金會之關係</a></h2>
@@ -554,7 +554,7 @@
 </ul>
 <p>The accountability process must not be punitive, and the process must be done with the active collaboration of the teams in question.</p>
 <p>In extreme circumstances where teams are willfully choosing to not act in good faith with regards to the wider Project, the Council has the authority to change a team's purview, move some subset of a team's purview to another team, or remove a team entirely. This is done through the Council's regular decision making process. (This does not apply to the moderation team; see the next section for accountability between the Council and moderation team.)</p>
-<h1 id="仲裁分歧與衝突"><a class="header" href="#仲裁分歧與衝突">仲裁、分歧與衝突</a></h1>
+<h1 id="審核分歧與衝突"><a class="header" href="#審核分歧與衝突">審核、分歧與衝突</a></h1>
 <p>This section describes the roles of the Leadership Council and the moderation team in helping resolve disagreements and conflicts, as well as the interactions between those teams.</p>
 <p>Disagreements and conflicts fall on a spectrum of interpersonal interaction. Disagreements are more factual and/or technical misalignments, while conflicts are more social or relational roadblocks to collaboration. Many interactions might display aspects of both disagreement and conflict. The Council can help with aspects of disagreement, while aspects of conflict are the purview of the moderation team.</p>
 <p>This RFC does not specify moderation policy in general, only the portion of it necessary to specify interactions with the Council and the checks and balances between the Council and the moderation team. General moderation policy is out of scope for this RFC.</p>
@@ -567,7 +567,7 @@
 <h2 id="涉及團隊或專案成員之衝突"><a class="header" href="#涉及團隊或專案成員之衝突">涉及團隊或專案成員之衝突</a></h2>
 <p>Conflicts involving teams or Project members should be brought to the moderation team as soon as possible. The Council can help mitigate the impact of those conflicts on pending/urgent decisions, but the moderation team is responsible for helping with conflicts and interpersonal issues, across teams or otherwise.</p>
 <p>Individuals or teams may also voluntarily engage in other processes to address conflicts or interpersonal issues, such as non-binding external mediation. Individuals or teams should keep the moderation team in the loop when doing so, and should seek guidance from the moderation team regarding appropriate resources or approaches for doing so. Individuals or teams must not use resources that would produce a conflict of interest.</p>
-<h2 id="仲裁人代表團"><a class="header" href="#仲裁人代表團">仲裁人代表團</a></h2>
+<h2 id="審核人代表團"><a class="header" href="#審核人代表團">審核人代表團</a></h2>
 <p>The moderation team must at all times maintain a publicly documented list of &quot;contingent moderators&quot;, who must be approved by both the moderation team and the Council via internal consent decision. The moderation team and contingent moderation team should both consist of at least three members each. The contingent moderators must be:</p>
 <ul>
 <li>Not part of the current moderation team <em>or</em> the Leadership Council.</li>
@@ -579,7 +579,7 @@
 <p>The need for contingent moderators arises in a high-tension situation, and the Project and Council must be prepared to trust them to step into that situation. Choosing people known and trusted by the rest of the Project helps lower tensions in that situation.</p>
 <p>Moderation is a high-burnout activity, and individual moderators or the moderation team may find itself wishing to step away from that work. Note that one or more individual moderators may always choose to step down, in which case the moderation team should identify and bring in new moderators to fill any gaps or shortfalls; if the moderation team asks a contingent moderator to become a full moderator, the team should then appoint a new contingent moderator. An individual moderator who stepped down <em>may</em> be selected as a contingent moderator. If the moderation team as a whole becomes simultaneously unavailable (as determined jointly by the Council and contingent moderators via internal consent decision), or chooses to step down simultaneously, the contingent moderators become the interim moderation team and must promptly appoint new contingent moderators and start seeking new full moderators.</p>
 <p>As the contingent moderator role does not have any regular required activities outside of exceptional situations, those appointed to that role must have regular check-ins with the moderation team, to reconfirm that they're still willing to serve in that role, and to avoid a circumstance in which the contingent moderators are abruptly needed and turn out to be unavailable.</p>
-<h2 id="仲裁團隊之政策與程序"><a class="header" href="#仲裁團隊之政策與程序">仲裁團隊之政策與程序</a></h2>
+<h2 id="審核團隊之政策與程序"><a class="header" href="#審核團隊之政策與程序">審核團隊之政策與程序</a></h2>
 <p>The moderation team has a duty to have robust policies and procedures in place. The Council provides oversight and assistance to ensure that the moderation team has those policies and procedures and that they are sufficiently robust.</p>
 <p>The Council may provide feedback to the moderation team and the moderation team is required to consider all feedback received. If the Council feels the moderation team has not followed moderation policies and procedures, the Council may <a href="#audits">require an audit</a> by the contingent moderators. However, the Council may not overrule a moderation decision or policy.</p>
 <h2 id="稽核"><a class="header" href="#稽核">稽核</a></h2>
@@ -600,7 +600,7 @@
 <p>The removed representatives and moderators may not serve on either the Council or the moderation team for at least one year.</p>
 <p>By default, the new Council and interim moderation team will take responsibility for clearly communicating the transition.</p>
 <p>This mechanism is an absolute last resort. It will almost certainly produce suboptimal outcomes, to say the least. If situations escalate to this outcome, many things have gone <em>horribly</em> wrong, and those cleaning up the aftermath should endeavor to prevent it from ever happening again. The indication (by either the moderation team or the Council) that the situation <em>might</em> escalate to this point should be considered a strong signal to come to the table and find a way to do &quot;Something Else which is Not That&quot; to avoid the situation.</p>
-<h2 id="涉及專案成員之仲裁措施"><a class="header" href="#涉及專案成員之仲裁措施">涉及專案成員之仲裁措施</a></h2>
+<h2 id="涉及專案成員之審核措施"><a class="header" href="#涉及專案成員之審核措施">涉及專案成員之審核措施</a></h2>
 <p>The moderation team, in the course of doing moderation work, necessarily requires the ability to take action not just against members of the Rust community but also against members of the Rust Project. Those actions may span the ladder of escalation all the way from a conversation to removal from the Project. This puts the moderation team in a position of power and trust. This RFC seeks to provide appropriate accountability and cross-checks for the moderation team, as well as for the Council.</p>
 <p>If the moderation team plans to enact externally visible sanctions against any member of the Rust Project (anything that would create a conspicuous absence, such as removal from a role, or exclusion from participation in a Project space for more than a week), then any party may request that an <a href="#audits">audit</a> take place by reaching out to either the Council or contingent moderators, and that audit will be automatically granted.</p>
 <p>For the first year after the ratification of this RFC, audits are automatically performed even without a request, to ensure the process is functional. After that time, the Council and moderation team will jointly review and decide whether to renew this provision.</p>
@@ -615,7 +615,7 @@
 <li>The moderation team and Council (excluding the affected parties) may jointly decide (as a private operational consent decision) to apply other sanctions limiting the representative's involvement in the Council. (In this scenario, representatives are not excluded if they have a conflict of interest, as the entire Council will have to cooperate to make the sanctions effective. If the conflicts of interest thus prevent applying these partial sanctions, the moderation team always has the option of full sanctions such as removal.)</li>
 </ul>
 <p>All of these also trigger a required audit. The Council must also be notified of any moderation actions involving representatives or alternates, or actions directly preventing people from becoming representatives.</p>
-<h2 id="涉及仲裁團隊成員之衝突"><a class="header" href="#涉及仲裁團隊成員之衝突">涉及仲裁團隊成員之衝突</a></h2>
+<h2 id="涉及審核團隊成員之衝突"><a class="header" href="#涉及審核團隊成員之衝突">涉及審核團隊成員之衝突</a></h2>
 <p>Conflicts involving a member of the moderation team will be handled by the remaining members of the moderation team (minus any with a conflict of interest), <em>together with</em> the contingent moderation team to provide additional oversight. Any member of the moderation or contingent moderation team should confer with the Council if there is a more systemic issue within the moderation team. The contingent moderators must audit this decision and must provide an audit report to the Council and moderation team.</p>
 <h1 id="本案之批准"><a class="header" href="#本案之批准">本案之批准</a></h1>
 <p>Since November of 2021 the following group has been acting as de-facto Project leadership: all members of the core team, all members of the moderation team, all Project representatives on the Rust Foundation board, and the leads of the &quot;top-level&quot; teams:</p>
