--- a/print.html
+++ b/print.html
@@ -2819,18 +2819,18 @@ impl Builder {
 <h2 id="涉及審核團隊成員之衝突"><a class="header" href="#涉及審核團隊成員之衝突">涉及審核團隊成員之衝突</a></h2>
 <p>Conflicts involving a member of the moderation team will be handled by the remaining members of the moderation team (minus any with a conflict of interest), <em>together with</em> the contingent moderation team to provide additional oversight. Any member of the moderation or contingent moderation team should confer with the Council if there is a more systemic issue within the moderation team. The contingent moderators must audit this decision and must provide an audit report to the Council and moderation team.</p>
 <h1 id="本案之批准"><a class="header" href="#本案之批准">本案之批准</a></h1>
-<p>Since November of 2021 the following group has been acting as de-facto Project leadership: all members of the core team, all members of the moderation team, all Project representatives on the Rust Foundation board, and the leads of the &quot;top-level&quot; teams:</p>
+<p>自 2021 年 11 月以來，下列成員實質上已在專案擔任中領導角色：所有 Core 團隊成員、所有審核團隊成員、Rust Foundation 理事會（board）上的所有專案代表以及「一級」團隊的負責人：</p>
 <ul>
-<li>Compiler</li>
+<li>編譯器</li>
 <li>Crates.io</li>
-<li>Dev tools</li>
-<li>Infrastructure</li>
-<li>Language</li>
-<li>Library</li>
-<li>Moderation (already included above)</li>
-<li>Release</li>
+<li>開發工具</li>
+<li>基礎架構</li>
+<li>語言</li>
+<li>函式庫</li>
+<li>審核（已包含在上方）</li>
+<li>發佈</li>
 </ul>
-<p>This RFC will be ratified using the standard RFC process, with the approving team being all the members of this de facto leadership group. This group should also raise objections on behalf of other members of the Project; in particular, team leads should solicit feedback from their teams and subteams.</p>
+<p>此 RFC 將以標準 RFC 程序審批，由前述實質上的領導層成員來批准。這些成員還應代表專案中其他成員提出異議，更具體來說，團隊負責人應徵求他的團隊和子團隊的回饋。</p>
 <h1 id="附註"><a class="header" href="#附註">附註</a></h1>
 <div class="footnote-definition" id="core"><sup class="footnote-definition-label">1</sup>
 <p>Unlike in some other Open Source projects, the Rust Project's &quot;core team&quot; does not refer to a group that decides the technical direction of the Project. As explained in more detail elsewhere in the RFC, the Rust Project distributes decision-making to many different teams who have responsibility for their specific purview. For example, the compiler team is in charge of the Rust compiler, the language team is in charge of language evolution, etc. This is part of why this RFC discontinues use of the term &quot;core team&quot;.</p>
