deploy: 9b7d758dd791f75016fbba4f19eabac2cc8c95bd

--- a/print.html
+++ b/print.html
@@ -2441,11 +2441,11 @@ impl Builder {
 <p>The Leadership Council established by this RFC focuses on identifying and prioritizing work outside of team purviews. The Council primarily delegates that work, rather than doing that work itself. The Council can also serve as a coordination, organization, and accountability body between teams, such as for cross-team efforts, roadmaps, and the long-term success of the Project.</p>
 <p>This RFC also establishes mechanisms for oversight and accountability between the Council as a whole, individual Council members, the moderation team, the Project teams, and Project members.</p>
 <h1 id="理事會之職責期待與限制"><a class="header" href="#理事會之職責期待與限制">理事會之職責、期待與限制</a></h1>
-<p>高層級描述下，理事會<em>只</em>負責以下職責：</p>
+<p>高層級描述下，理事會<strong>只</strong>負責以下職責：</p>
 <ul>
 <li>識別、優先排序以及追蹤由於缺乏明確負責者而無法執行的工作（而不應對負責者刻意降低優先度、置於待辦事項等的工作）。</li>
-<li>委派該工作，並潛在可建立全新的（並可能為<em>暫時性的</em>）團隊來負責此工作。</li>
-<li>為沒有明確負責者的<em>緊急</em>事項下達決策。
+<li>委派該工作，並潛在可建立全新的（並可能為<strong>暫時性的</strong>）團隊來負責此工作。</li>
+<li>為沒有明確負責者的<strong>緊急</strong>事項下達決策。
 <ul>
 <li>此行為只能在特例情境下執行，即該決策無法委派給既有團隊也無法交付給全新團隊時。</li>
 </ul>
@@ -2461,17 +2461,17 @@ impl Builder {
 </ul>
 <p>除了這些職責外，對理事會也有額外的期待與限制，以幫助判斷理事會是否正常運作：</p>
 <ul>
-<li><em>委派工作</em>：理事會不應該主動執行本案沒有明確指派的工作；理事會必須委派給既有團隊或者成員與理事會不重複的全新團隊。執行工作的團隊中可以有理事會的代表，但是做為團隊成員並不屬於理事會代表的權責。</li>
-<li><em>為了確保專案長期的流暢運作</em>：理事會應該要確保非緊急專案管理工作有接受優先度排序，並且能定期完成以確保專案不會累積成整個組織級別的負擔。</li>
-<li><em>負責任</em>：由於理事會擁有廣泛的權力，理事會與理事會代表必須要為自己的行為負責任。他們應該要傾聽他人的回饋，並且能對他們是否可以繼續達到該職位所需的職責與期待進行主動的反思。</li>
-<li><em>做好代表</em>：理事會代表不只要能代表整個專案各形式的考量，也要能盡可能代表 Rust 社群的各方面（人口分布、技術背景等等）。</li>
-<li><em>共享負擔</em>：所有理事會代表都必須共享理事會職責的負擔。</li>
-<li><em>尊重他人的權責</em>：理事會必須尊重委派給各團隊的權責。理事會必須與各團隊諮商並且共同合作解決問題，並且盡量不作出違背任何團隊意願的決策。</li>
-<li><em>以良善原則行事</em>：理事會代表應該以 Rust 專案<em>整體</em>的利益作出決策，即便這些決策可能會與各個團隊、雇主以及其他外部單位的利益衝突。</li>
-<li><em>保持透明</em>：雖然不是所有決策（以及決策的各方面）都能被公開，理事會應該要盡可能維持其決策的公開與透明。理事會也應該要確保專案的組織架構很明確透明。</li>
-<li><em>尊重隱私</em>：理事會的成員絕不能為了透明性而洩漏個人或者機密情報，包含可能會意外洩漏重要資訊的周邊資訊。</li>
-<li><em>維持健康的工作環境</em>：理事會代表應該要為他們的貢獻與其性質感到滿意。他們不應認為自己在理事會中的存在只是義務所為，而必須是因為他們用有意義的方式主動參與。</li>
-<li><em>持續演化</em>：理事會受到期待會隨著時間演化以應對團隊、專案以及社群的演化。</li>
+<li><strong>委派工作</strong>：理事會不應該主動執行本案沒有明確指派的工作；理事會必須委派給既有團隊或者成員與理事會不重複的全新團隊。執行工作的團隊中可以有理事會的代表，但是做為團隊成員並不屬於理事會代表的權責。</li>
+<li><strong>為了確保專案長期的流暢運作</strong>：理事會應該要確保非緊急專案管理工作有接受優先度排序，並且能定期完成以確保專案不會累積成整個組織級別的負擔。</li>
+<li><strong>負責任</strong>：由於理事會擁有廣泛的權力，理事會與理事會代表必須要為自己的行為負責任。他們應該要傾聽他人的回饋，並且能對他們是否可以繼續達到該職位所需的職責與期待進行主動的反思。</li>
+<li><strong>做好代表</strong>：理事會代表不只要能代表整個專案各形式的考量，也要能盡可能代表 Rust 社群的各方面（人口分布、技術背景等等）。</li>
+<li><strong>共享負擔</strong>：所有理事會代表都必須共享理事會職責的負擔。</li>
+<li><strong>尊重他人的權責</strong>：理事會必須尊重委派給各團隊的權責。理事會必須與各團隊諮商並且共同合作解決問題，並且盡量不作出違背任何團隊意願的決策。</li>
+<li><strong>以良善原則行事</strong>：理事會代表應該以 Rust 專案<strong>整體</strong>的利益作出決策，即便這些決策可能會與各個團隊、雇主以及其他外部單位的利益衝突。</li>
+<li><strong>保持透明</strong>：雖然不是所有決策（以及決策的各方面）都能被公開，理事會應該要盡可能維持其決策的公開與透明。理事會也應該要確保專案的組織架構很明確透明。</li>
+<li><strong>尊重隱私</strong>：理事會的成員絕不能為了透明性而洩漏個人或者機密情報，包含可能會意外洩漏重要資訊的周邊資訊。</li>
+<li><strong>維持健康的工作環境</strong>：理事會代表應該要為他們的貢獻與其性質感到滿意。他們不應認為自己在理事會中的存在只是義務所為，而必須是因為他們用有意義的方式主動參與。</li>
+<li><strong>持續演化</strong>：理事會受到期待會隨著時間演化以應對團隊、專案以及社群的演化。</li>
 </ul>
 <p>理事會代表、審核團隊成員以及其他專案成員都應該能為身邊的人以及更廣泛的社群做好示範。這些職位都有對應的責任與領導，也因此這些人的行為都帶有份量而會對社群造成重大影響，也因此必須注意行使職權。選擇要行使這些職權的人都應該要知道身邊的人會以對應的高標準看待他們。</p>
 <h1 id="理事會組織架構"><a class="header" href="#理事會組織架構">理事會組織架構</a></h1>
@@ -2506,7 +2506,7 @@ impl Builder {
 </ul>
 <p>本清單並不是最佳的一級團隊組成。本案建議理事會的最開始的工作就是檢視既存的管理架構並確保所有架構都在一個或多個一級團隊中有直接或間接的代表，並且確保所有一級團隊都有符合能被認定為一級團隊的條件。這將會涉及對一級團隊組成的調整。</p>
 <h3 id="啟動台一級團隊"><a class="header" href="#啟動台一級團隊">「啟動台」一級團隊</a></h3>
-<p>本案會建立「啟動台」團隊以<em>暫時</em>接受沒有對應一級團隊可以歸類的子團隊。這樣能夠確保在更加永久性的母團隊被找到或者建立起之前，所有團隊都在理事會有代表。</p>
+<p>本案會建立「啟動台（launching pad）」團隊以<strong>暫時</strong>接受沒有對應一級團隊可以歸類的子團隊。這樣能夠確保在更加永久性的母團隊被找到或者建立起之前，所有團隊都在理事會有代表。</p>
 <p>「啟動台」是個雨傘團隊：該團隊沒有直接成員，只有子團隊代表。</p>
 <p>理事會應該要致力於為所有「啟動台」子團隊找尋或者建立更合適的母團隊，並且隨之將子團隊移轉至對應的母團隊。</p>
 <p>在某些情況下，雖有合適的母團隊但尚未準備好接受子團隊時，啟動台能作為臨時歸宿容納這些例子。</p>
